# EntitySystems

./: .gitignore  CMakeLists.txt  LICENSE  README.md
EntitySystems/EntitySystems/: DisArray.h
Source/EntitySystems/: CMakeLists.txt  EntitySystems.vcxproj  EntitySystems.vcxproj.filters
Source/EntitySystems/include/: DisArray.h  System.h  TestPrintManager.h  TestSystem.h
Source/EntitySystems/include/ES/: DisArray.h  ReferribleSystem.h  System.h  TestPrintManager.h  TestSystem.h  disarray.h  for_each_where.h  inplace_transform.h  transform_self.h
Source/EntitySystems/src/: System.cpp  test.cpp
Source/TestGame/: CMakeLists.txt  TestGame.cpp  TestGame.vcxproj  TestGame.vcxproj.filters
Source/TestGame/include/Game/: Basic2DShader.h  DumbEnemySystem.h  ILogic.h  InputSystem.h  InstancedSprite.h  InstancingTest.h  KeyCommand.h  Lit2D.h  RenderingLayer.h  RenderingSystem.h  Scene.h  SimpleBulletSystem.h  SimpleMovementManager.h  Sprite.h  SpriteDrawCommand.h  Timer.h  UpdatableSystem.h  Vector2.h  Vector2f.h
Source/TestGame/src/: Basic2DShader.cpp  ILogic.cpp  Scene.cpp  TestGame.cpp  Timer.cpp
