
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(EntitySystems)

SET(BUILD_DIRECTORY "${CMAKE_SOURCE_DIR}/Build")
SET(OUTPUT_DIRECTORY "${BUILD_DIRECTORY}/Output")
SET(BINARY_DIRECTORY "${OUTPUT_DIRECTORY}/Bin")
SET(LIBRARY_DIRECTORY "${OUTPUT_DIRECTORY}/Lib")

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BINARY_DIRECTORY})
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${LIBRARY_DIRECTORY})
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${LIBRARY_DIRECTORY})

FOREACH(OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES})
    string(TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${BINARY_DIRECTORY})
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${LIBRARY_DIRECTORY})
    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${LIBRARY_DIRECTORY})
ENDFOREACH(OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES)

SET(PROJECT_NAMES "EntitySystems" "TestGame")

FOREACH(PROJECT_NAME ${PROJECT_NAMES})

	SET(OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/Output/${PROJECT_NAME}")

	ADD_SUBDIRECTORY("${CMAKE_SOURCE_DIR}/Source/${PROJECT_NAME}" ${OUTPUT_DIRECTORY})
	
ENDFOREACH(PROJECT_NAME ${PROJECT_NAMES})
