
CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)

SET(PACKAGE ${PROJECT_NAME})
SET(VERSION "0.0.1")

SET(PACKAGE_NAME ${PACKAGE})
SET(PACKAGE_VERSION ${VERSION})
SET(PACKAGE_STRING "${PACKAGE_NAME} ${PACKAGE_VERSION}")

MESSAGE(STATUS "Added Project: " ${PACKAGE_STRING})

INCLUDE_DIRECTORIES("include")
INCLUDE_DIRECTORIES("src")

FILE(GLOB ENTITY_SYSTEMS_SRC "src/*.cpp")

MESSAGE(STATUS "Source Files: ")
FOREACH(SRC_FILE ${ENTITY_SYSTEMS_SRC})
    MESSAGE(STATUS ${SRC_FILE})
ENDFOREACH(SRC_FILE ${ENTITY_SYSTEMS_SRC})

ADD_LIBRARY(${PROJECT_NAME} SHARED ${ENTITY_SYSTEMS_SRC})
ADD_LIBRARY("${PROJECT_NAME}_s" STATIC ${ENTITY_SYSTEMS_SRC})

SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES DEBUG_POSTFIX "_d")
SET_TARGET_PROPERTIES("${PROJECT_NAME}_s" PROPERTIES DEBUG_POSTFIX "d")

SET_PROPERTY(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 11)
SET_PROPERTY(TARGET "${PROJECT_NAME}_s" PROPERTY CXX_STANDARD 11)

SET_PROPERTY(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD_REQUIRED ON)
SET_PROPERTY(TARGET "${PROJECT_NAME}_s" PROPERTY CXX_STANDARD_REQUIRED ON)
