
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

IF(NOT DEFINED PROJECT_NAME)
	SET(PROJECT_NAME "TestGame")
ENDIF(NOT DEFINED PROJECT_NAME)

SET(PACKAGE ${PROJECT_NAME})
SET(VERSION "1.0.0")

SET(PACKAGE_NAME ${PACKAGE})
SET(PACKAGE_VERSION ${VERSION})
SET(PACKAGE_STRING "${PACKAGE_NAME} ${PACKAGE_VERSION}")

MESSAGE(STATUS "Added Project: " ${PACKAGE_STRING})

INCLUDE_DIRECTORIES("../EntitySystems/include")
LINK_DIRECTORIES(${LIBRARY_DIRECTORY})
MESSAGE(STATUS ${LIBRARY_DIRECTORY})

INCLUDE_DIRECTORIES("include")
INCLUDE_DIRECTORIES("src")

FILE(GLOB TEST_GAME_SRC "src/*.cpp")

MESSAGE(STATUS "Source Files: ")
FOREACH(SRC_FILE ${TEST_GAME_SRC})
	MESSAGE(STATUS ${SRC_FILE})
ENDFOREACH(SRC_FILE ${TEST_GAME_SRC})

ADD_EXECUTABLE(${PROJECT_NAME} ${TEST_GAME_SRC})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} debug EntitySystemsStatic_d optimized EntitySystemsStatic)

SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES DEBUG_POSTFIX "_d")
